--- a/Buoi1/del_q_p.html
+++ b/Buoi1/del_q_p.html
@@ -16,6 +16,6 @@
             copy y chang trong editor luôn <br>
             vasvassvas
     </pre>
-    <!-- test commit sadasdads-->
+    <!-- test commit sadaafafasfassdads-->
 </body>
 </html>
