--- a/w3school/index.html
+++ b/w3school/index.html
@@ -391,7 +391,7 @@
                     <a href="#"><i class="fa-brands fa-discord"></i></a>
                     <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
                     <a href="#">Forum</a>
-                    <a href="#">About</a>
+                    <a href="#">About1</a>
                    </div>
                    <div style="width: 70%;">
                      <p style="font-size: 12px; color: #ddd; margin-bottom: 0px">W3Schools is optimized for learning and training. Examples might be simplified to improve reading and learning.
